syntax = "proto3";

package helloworld;

service Hello {
  // unary call
  rpc SayHello(HelloRequest) returns (HelloResponse);
  // server streaming call
  rpc SayRepeatHello(RepeatHelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message RepeatHelloRequest {
  string name = 1;
  int32 count = 2;
}

message HelloResponse {
  string message = 1;
}